--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,82 @@
-Django==2.2.4
+alembic==1.0.11
+apturl==0.5.2
+asn1crypto==0.24.0
+blinker==1.4
+Brlapi==0.6.6
+certifi==2018.1.18
+chardet==3.0.4
+Click==7.0
+command-not-found==0.3
+cryptography==2.1.4
+cupshelpers==1.0
+defer==1.0.6
+distro-info===0.18ubuntu0.18.04.1
+dominate==2.4.0
+Flask==1.1.1
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.0
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.2
+httplib2==0.9.2
+idna==2.6
+itsdangerous==1.1.0
+Jinja2==2.10.1
+kazam==1.4.5
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+louis==3.5.0
+macaroonbakery==1.1.3
+Mako==1.1.0
+MarkupSafe==1.1.1
+netifaces==0.10.4
+oauth==1.0.1
+olefile==0.45.1
+pexpect==4.2.1
+Pillow==6.1.0
+protobuf==3.0.0
+psycopg2==2.8.3
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+pygobject==3.26.1
+pymacaroons==0.13.0
+PyNaCl==1.1.2
+pyperclip==1.7.0
+pyRFC3339==1.0
+python-apt==1.6.4
+python-dateutil==2.8.0
+python-debian==0.1.32
+python-editor==1.0.4
 pytz==2019.2
+pyxdg==0.25
+PyYAML==3.12
+reportlab==3.4.0
+requests==2.18.4
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.12.0
+SQLAlchemy==1.3.6
 sqlparse==0.3.0
+system-service==0.3
+systemd-python==234
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.22
+usb-creator==0.3.3
+virtualenv==16.7.3
+visitor==0.1.3
+wadllib==1.3.2
+Werkzeug==0.15.5
+WTForms==2.2.1
+xkit==0.0.0
+zope.interface==4.3.2
